cmake_minimum_required(VERSION 3.27)
project(Final_project_in_c C)

set(CMAKE_C_STANDARD 11)

add_executable(Final_project_in_c main.c
        Viewer.c
        Viewer.h
        Person.c
        Person.h
        Contract.c
        Contract.h
        Channel.c
        Channel.h
        General.c
        General.h
        Commercial.c
        Commercial.h
        List.c
        List.h
        Show.c
        Show.h
        Date.c
        Date.h
        Complaints.c
        Complaints.h
        Define.h
        Employee.c
        Employee.h
        Time.c
        Time.h
        TvCompany.c
        TvCompany.h)
